--- a/users/templates/users/partials/account_details.html
+++ b/users/templates/users/partials/account_details.html
@@ -34,4 +34,4 @@
         </button>
     </div>
 </div>
-<div id="account-details-content" hx-swap-oob="true"></div>
+<div id="account-details-content" hx-swap-oob="true"></div> <!-- заготовка-контейнер -->
