--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
-    <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.10"></script>   <!-- include htmx for AJAX functionality -->
 </head>
 <body>
     <div class="container">
